apps/external-dns-operator/networkpolicies/egress-allow-external.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-allow-external
  namespace: external-dns
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    # Cloudflare API.
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
